[package]
name = "bam2bedmethyl"
version = "0.2.0"
edition = "2021"
authors = ["Simon Heath (simon.heath@gmail.com)"]
description = "Extract methylation information from a BAM file (MM/ML tags) and create a bedmethyl file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = { version = "~4", features = ["cargo", "color"] }
compress_io = "~0.5"
anyhow = "~1.0"
num_cpus = "~1"
crossbeam-channel = "~0.5"
libc = "~0.2"
regex = "~1.7"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_pcg = "~0.3"
rs_htslib = { path = "../rs_htslib" }
